--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-table": "^8.21.3",
+    "@types/json2md": "^1.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
@@ -21,6 +23,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-json-view": "^1.21.3",
+    "react-shiki": "^0.9.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "shiki": "^3.15.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
