--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@ai-sdk/react": "^2.0.101",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-table": "^8.21.3",
     "@types/diff-match-patch": "^1.0.36",
@@ -28,6 +31,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-json-view": "^1.21.3",
+    "react-resizable-panels": "^3.0.6",
     "react-shiki": "^0.9.0",
     "react-syntax-highlighter": "^16.1.0",
     "shiki": "^3.15.0",
